<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_wave"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="2"
            android:gravity="bottom|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:gravity="bottom|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/welcome"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/username"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:maxLength="60"
                            android:inputType="text"
                            android:hint="@string/username">

                            <requestFocus />

                        </EditText>

                        <EditText
                            android:layout_marginTop="10dp"
                            android:id="@+id/password"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:maxLength="20"
                            android:layout_height="40dp"
                            android:inputType="textPassword"
                            android:hint="@string/password"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="vertical">

                        <Button
                            android:layout_gravity="center"
                            android:id="@+id/login"
                            android:layout_marginTop="20dp"
                            android:text="@string/login"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                        <Button
                            android:layout_gravity="center"
                            android:id="@+id/register"
                            android:layout_marginTop="20dp"
                            android:text="@string/register"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>